# MiniGame

./: .gitignore  CMakeLists.txt  build.bat
include/: _Engine.hpp  _Resources.hpp  _State.hpp  _StateMachine.hpp  _Window.hpp
src/: _Engine.cpp  _State.cpp  _StateMachine.cpp  _Window.cpp  main.cpp
